# afmt

./: Cargo.toml  README.md  TODO.md
examples/: logs.rs
src/: codegen.rs  lib.rs  parse.rs
tests/: foo.rs
