[package]
name = "afmt"
version = "0.1.1"
authors = ["Eduard Vercaemer <vercaemereduard@gmail.com>"]
license = "MIT"
description = "Basic data structure parsing from strings"
homepage = "https://github.com/eduardvercaemer/afmt"
repository = "https://github.com/eduardvercaemer/afmt"
documentation = "https://docs.rs/afmt"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
devise = "0.2.0"
